@@ -20,6 +20,7 @@ import sys, os, struct
 from matplotlib import rcParams, verbose
 
 which = None, None
+use_maskedarray = None
 
 # First, see if --numarray or --Numeric was specified on the command
 # line:
@@ -30,14 +31,23 @@ for a in sys.argv:
              "--NumPy", "--numpy", "--NUMPY", "--Numpy",
              ]:
         which = a[2:], "command line"
-        break
-    del a
+    if a == "--maskedarray":
+        use_maskedarray = True
+    if a == "--ma":
+        use_maskedarray = False
+del a
 
 if which[0] is None:
     try:  # In theory, rcParams always has *some* value for numerix.
         which = rcParams['numerix'], "rc"
     except KeyError:
         pass
+
+if use_maskedarray is None:
+    try:
+        use_maskedarray = rcParams['maskedarray']
+    except KeyError:
+        use_maskedarray = False
 
 # If all the above fail, default to Numeric. Most likely not used.
 if which[0] is None:
